@@ -1,3 +1,11 @@
+2004-11-04  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* storage/exchange-folder-size.c : Added a new file. This handles the
+	displaying of the folder sizes
+	* storage/exchange-folder-size.h : Similar
+	* storage/exchange-folder-tree.glade : The dialog for displaying the 
+	folder tree and the folder sizes
+
 2004-11-04  Sushma Rai  <rsushma@novell.com>
 
 	* storage/exchange-account.c (exchange_account_connect): Finding
@@ -12,7 +20,7 @@
 	from domain name.
 	(lookup_passwd_max_age): Finds the value of the attribute maxPwdAge.
 
-	*lib/gctest.c (do_lookup): Looking up for userAccountControl and maxPwdAge
+	* lib/gctest.c (do_lookup): Looking up for userAccountControl and maxPwdAge
 	attributes.
 
 2004-11-03  Sarfraaz Ahmed <asarfraaz@novell.com>
